--- a/NefyraExo/app/src/main/AndroidManifest.xml
+++ b/NefyraExo/app/src/main/AndroidManifest.xml
@@ -1,27 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <manifest 
-    android:sharedUserId="n.nefyra.exo"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_MEDIA_VIDEO" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <application
-        android:sharedUserId="n.nefyra.exo"
-        android:debuggable="true"
-        android:requestLegacyExternalStorage="true"
-        android:usesCleartextTraffic="true"
+    <application 
         android:allowBackup="true" 
-        android:icon="@mipmap/ih" 
+        android:icon="@mipmap/ic_launcher" 
+        android:roundIcon="@mipmap/ic_launcher" 
         android:label="@string/app_name" 
         android:supportsRtl="true" 
         android:theme="@style/AppTheme">
         <activity 
             android:name="MainActivity" 
-            android:exported="true"
-            android:screenOrientation="landscape"
-            android:configChanges="orientation|screenSize|keyboardHidden">
             android:exported="true">
             <intent-filter>
                 <action 
